<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scroll"
    android:orientation="vertical"
    android:background="@color/mid"
    tools:context=".MainActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="480dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/colorPrimaryDark">


            <TextView
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_below="@id/image"
                android:layout_marginTop="4dp"
                android:text="@string/ktu"
                android:textColor="@color/white"
                android:textSize="25dp"
                android:layout_centerHorizontal="true"/>

            <ImageView
                android:layout_width="150dp"
                android:layout_height="80dp"
                android:layout_centerInParent="true"
                android:paddingBottom="1dp"
                android:id="@+id/image"
                android:background="@drawable/ktu"/>



        </RelativeLayout>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="480dp"
            android:background="@color/mid"
            android:layout_marginTop="45dp">



            <Button
                android:id="@+id/note"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/circle"
                android:text="@string/butnote"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:layout_marginTop="35sp"
                android:layout_below="@id/question"
                android:onClick="note"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="bottom"
                android:id="@+id/question"
                android:textColor="@color/black"
                android:layout_marginTop="35sp"
                android:background="@drawable/circle"
                android:text="@string/butquestion"
                android:onClick="question"
                android:textSize="30sp"
                android:layout_below="@+id/help"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/circle"
                android:text="@string/help"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:onClick="help"
                android:id="@+id/help" />


            <Button
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:id="@+id/about"
                android:background="@drawable/circle"
                android:text="ABOUT DEVELOPER"
                android:textColor="@color/black"
                android:layout_below="@id/note"
                android:layout_marginTop="35sp"
                android:textSize="28dp"
                android:onClick="about"
                android:layout_centerHorizontal="true"/>


        </RelativeLayout>



    </LinearLayout>




</ScrollView>






